:bug: fix painting wrap

--- a/style.css
+++ b/style.css
@@ -66,12 +66,13 @@ main {
 #painting {
   width: 100%;
   flex-basis: 80%;
+  max-height: 80%;
   background: hsl(0, 0%, 86%);
 }
 
 .painting {
   display: flex;
-  flex-wrap: wrap;
+  overflow: scroll;
   width: 100%;
   height: 100%;
 }
@@ -81,4 +82,3 @@ main {
   width: 100%;
   flex-basis: 5%;
 }
-
